홈페이지 만들기 양식 만들기

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,8 +9,33 @@
 </head>
 <body>
     <form>
-        <label for="a">여기를 누르세요</label>
-        <input id="a" type="checkbox" />
+        <div>
+            <label for="email-input">이메일 입력 : </label>
+            <input id="email-input" placeholder="이메일 주소를 입력해주세요." type="email"/>
+        </div>
+        <div>
+            <label for="password-input">비밀번호 입력 : </label>
+            <input id="password-input" placeholder="비밀번호를 입력해주세요." type="password"/>
+        </div>
+        <div>
+            <label for="password-check-input">비밀번호 확인 : </label>
+            <input id="password-check-input" placeholder="비밀번호 확인" type="password"/>
+        </div>
+        <div>
+            <label for="name-input">이름 : </label>
+            <input id="name-input" placeholder="이름을 입력하세요" />
+        </div>
+        <div>
+            <label for="phone-input">핸드폰 번호 : </label>
+            <input id="phone-input" placeholder="핸드폰 번호를 입력하세요" type="number"/>
+        </div>
+        <div>
+            <label for="a">동의하시겠습니까?</label>
+            <input id="a" type="checkbox" />
+        </div>
+        <div>
+            <input type="submit">
+        </div>
     </form>
 </body>
 </html>
