홈페이지 만들기 form태그, input 태그 확인

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,27 +11,33 @@
     <form>
         <div>
             <label for="email-input">이메일 입력 : </label>
-            <input id="email-input" placeholder="이메일 주소를 입력해주세요." type="email"/>
+            <input id="email-input" placeholder="이메일 주소를 입력해주세요." type="email"
+            required/>
         </div>
         <div>
             <label for="password-input">비밀번호 입력 : </label>
-            <input id="password-input" placeholder="비밀번호를 입력해주세요." type="password"/>
+            <input id="password-input" placeholder="비밀번호를 입력해주세요." type="password"
+                   required/>
         </div>
         <div>
             <label for="password-check-input">비밀번호 확인 : </label>
-            <input id="password-check-input" placeholder="비밀번호 확인" type="password"/>
+            <input id="password-check-input" placeholder="비밀번호 확인" type="password"
+                   required/>
         </div>
         <div>
             <label for="name-input">이름 : </label>
-            <input id="name-input" placeholder="이름을 입력하세요" />
+            <input id="name-input" placeholder="이름을 입력하세요"
+                   required/>
         </div>
         <div>
             <label for="phone-input">핸드폰 번호 : </label>
-            <input id="phone-input" placeholder="핸드폰 번호를 입력하세요" type="number"/>
+            <input id="phone-input" placeholder="핸드폰 번호를 입력하세요" type="number"
+                   required/>
         </div>
         <div>
             <label for="a">동의하시겠습니까?</label>
-            <input id="a" type="checkbox" />
+            <input id="a" type="checkbox"
+                   required/>
         </div>
         <div>
             <input type="submit">
