style의 속성에 inline방식으로 css입히는 방법

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,6 +8,7 @@
     <title>join page</title>
 </head>
 <body>
+    <div style="background: red"> 여기</div>
     <form>
         <div>
             <label for="email-input">이메일 입력 : </label>
