--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,11 +6,14 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>join page</title>
+<!--    internel 방식-->
     <style>
         div {
             background-color: beige;
         }
     </style>
+<!--    style css를 적용하는 방법-->
+    <link rel="stylesheet" href="index.css" />
 </head>
 <body>
     <div style="background: red"> 여기</div>
