--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,18 +6,14 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>join page</title>
-<!--    internel 방식-->
-    <style>
-        div {
-            background-color: beige;
-        }
-    </style>
 <!--    style css를 적용하는 방법-->
     <link rel="stylesheet" href="index.css" />
 </head>
 <body>
-    <div style="background: red"> 여기</div>
     <form>
+        <div>
+            여기
+        </div>
         <div>
             <label for="email-input">이메일 입력 : </label>
             <input id="email-input" placeholder="이메일 주소를 입력해주세요." type="email"
