span은 intline tag로 높이와 너비를 지정해줘도 보이지 않는다.

--- a/HTML/BoxModel.html
+++ b/HTML/BoxModel.html
@@ -6,9 +6,23 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        div {
+            width: 100px;
+            height: 100px;
+            background-color: aqua;
+        }
+        span {
+            width: 100px;
+            height: 100px;
+            background-color: violet;
+        }
+    </style>
 </head>
 <body>
     <div></div>
+<!--    span 태그는 너비와 높이를 가지지 않는다 (inline tag) -->
     <span></span>
+
 </body>
 </html>
