display option을 inline -> block으로 변경시 노출 되어질 수 있다.

--- a/HTML/BoxModel.html
+++ b/HTML/BoxModel.html
@@ -8,11 +8,13 @@
     <title>Document</title>
     <style>
         div {
+            display: inline;
             width: 100px;
             height: 100px;
             background-color: aqua;
         }
         span {
+            display: block;
             width: 100px;
             height: 100px;
             background-color: violet;
