content의 영역 변경

--- a/HTML/BoxModel.html
+++ b/HTML/BoxModel.html
@@ -11,17 +11,14 @@
             width: 100px;
             height: 100px;
             background-color: aqua;
-        }
-        span {
-            display: block;
-            width: 100px;
-            height: 100px;
-            background-color: violet;
+            padding: 50px;
+            margin: 200px;
+            border: 1px solid black;
         }
     </style>
 </head>
 <body>
-    <div></div>
+    <div>♣♣♣♣♣♣♣♣♣ ♣♣♣♣♣♣♣♣♣ ♣♣♣♣♣♣♣♣♣</div>
 <!--    span 태그는 너비와 높이를 가지지 않는다 (inline tag) -->
     <span></span>
 
