content의 영역 변경

--- a/HTML/BoxModel.html
+++ b/HTML/BoxModel.html
@@ -12,15 +12,14 @@
             height: 100px;
             background-color: aqua;
             padding: 50px;
-            margin: 200px;
-            border: 1px solid black;
+            margin-bottom: 200px;
+            border: 10px ridge black;
         }
     </style>
 </head>
 <body>
     <div>♣♣♣♣♣♣♣♣♣ ♣♣♣♣♣♣♣♣♣ ♣♣♣♣♣♣♣♣♣</div>
-<!--    span 태그는 너비와 높이를 가지지 않는다 (inline tag) -->
-    <span></span>
+    <div>♣♣♣♣♣♣♣♣♣</div>
 
 </body>
 </html>
