--- a/HTML/Position.html
+++ b/HTML/Position.html
@@ -11,14 +11,16 @@
             width: 200px;
             height: 200px;
             border: 1px solid red;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+
         }
         div {
             width: 50px;
             height: 50px;
             background-color: red;
+            position: absolute;
+            /*body 기준으로 적용된다.*/
+            top: 100px;
+            left: 100px;
         }
     </style>
 </head>
