--- a/HTML/Position.html
+++ b/HTML/Position.html
@@ -11,6 +11,7 @@
             width: 200px;
             height: 200px;
             border: 1px solid red;
+            position: relative;
 
         }
         div {
