[css] id 형 css 버튼

--- a/HTML/Selector.html
+++ b/HTML/Selector.html
@@ -10,10 +10,13 @@
         .btn {
             background-color: yellow;
         }
+        #btn-1 {
+            background-color: red;
+        }
     </style>
 </head>
 <body>
-    <button class="btn">1번 버튼</button>
+    <button class="btn" id="btn-1">1번 버튼</button>
     <button class="btn">2번 버튼</button>
     <button class="btn">3번 버튼</button>
     <button class="btn">로그인</button>
