[css] class형 css 버튼은 나중에 정의된 버튼이 먼저 적용된다.

--- a/HTML/Selector.html
+++ b/HTML/Selector.html
@@ -10,6 +10,9 @@
         .btn {
             background-color: yellow;
         }
+        .btn-blue {
+            background-color: blue;
+        }
         #btn-1 {
             background-color: red;
         }
@@ -17,7 +20,7 @@
 </head>
 <body>
     <button class="btn" id="btn-1">1번 버튼</button>
-    <button class="btn">2번 버튼</button>
+    <button class="btn btn-blue">2번 버튼</button>
     <button class="btn">3번 버튼</button>
     <button class="btn">로그인</button>
     <button class="btn">뒤로 가기</button>
