[css] nth-child 옵션을 통해서 지정하는 것도 가능하다.

--- a/HTML/Selector.html
+++ b/HTML/Selector.html
@@ -7,22 +7,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Selector</title>
     <style>
-        .btn {
-            background-color: yellow;
-        }
-        .btn-blue {
-            background-color: blue;
-        }
-        #btn-1 {
-            background-color: red;
+        /*.btn {*/
+        /*    background-color: aqua;*/
+        /*}*/
+        /*#btn-3 {*/
+        /*    background-color: yellow;*/
+        /*}*/
+        button:nth-child(3){
+            background-color: brown;
         }
     </style>
 </head>
 <body>
     <button class="btn" id="btn-1">1번 버튼</button>
-    <button class="btn btn-blue">2번 버튼</button>
-    <button class="btn">3번 버튼</button>
-    <button class="btn">로그인</button>
-    <button class="btn">뒤로 가기</button>
+    <button class="btn" id="btn-2">2번 버튼</button>
+    <button class="btn" id="btn-3">3번 버튼</button>
+    <button class="btn" id="btn-4">로그인</button>
+    <button class="btn" id="btn-5">뒤로 가기</button>
 </body>
 </html>
