[css] div > button  특정 태그 안의 button의 css만 변경할 수 있다.

--- a/HTML/Selector.html
+++ b/HTML/Selector.html
@@ -13,16 +13,25 @@
         /*#btn-3 {*/
         /*    background-color: yellow;*/
         /*}*/
-        button:nth-child(3){
+        div > button:nth-child(3){
             background-color: brown;
         }
     </style>
 </head>
 <body>
-    <button class="btn" id="btn-1">1번 버튼</button>
-    <button class="btn" id="btn-2">2번 버튼</button>
-    <button class="btn" id="btn-3">3번 버튼</button>
-    <button class="btn" id="btn-4">로그인</button>
-    <button class="btn" id="btn-5">뒤로 가기</button>
+    <div>
+        <button class="btn" id="btn-1">1번 버튼</button>
+        <button class="btn" id="btn-2">2번 버튼</button>
+        <button class="btn" id="btn-3">3번 버튼</button>
+        <button class="btn" id="btn-4">로그인</button>
+        <button class="btn" id="btn-5">뒤로 가기</button>
+    </div>
+    <main>
+        <button class="btn" id="btn-1">1번 버튼</button>
+        <button class="btn" id="btn-2">2번 버튼</button>
+        <button class="btn" id="btn-3">3번 버튼</button>
+        <button class="btn" id="btn-4">로그인</button>
+        <button class="btn" id="btn-5">뒤로 가기</button>
+    </main>
 </body>
 </html>
