[css] button:action 의사코드, 가상코드의 경우 이벤트 발생 시 실행되는 옵션들이다.

--- a/HTML/Selector.html
+++ b/HTML/Selector.html
@@ -16,6 +16,9 @@
         div > button:nth-child(3){
             background-color: brown;
         }
+        button:active {
+            background-color: tomato;
+        }
     </style>
 </head>
 <body>
