[css] button:hover 마우스를 올렸을 때

--- a/HTML/Selector.html
+++ b/HTML/Selector.html
@@ -19,6 +19,9 @@
         button:active {
             background-color: tomato;
         }
+        button:hover {
+            background-color: yellow;
+        }
     </style>
 </head>
 <body>
