--- a/HTML/Selector.html
+++ b/HTML/Selector.html
@@ -22,10 +22,14 @@
         button:hover {
             background-color: yellow;
         }
+        a:visited {
+            color: greenyellow;
+        }
     </style>
 </head>
 <body>
     <div>
+        <a href="https://www.naver.com" >네이버</a>
         <button class="btn" id="btn-1">1번 버튼</button>
         <button class="btn" id="btn-2">2번 버튼</button>
         <button class="btn" id="btn-3">3번 버튼</button>
