[css] 1-9 과제 button:hover시 색상 변경

--- a/HTML/Selector.html
+++ b/HTML/Selector.html
@@ -25,6 +25,16 @@
         a:visited {
             color: greenyellow;
         }
+        button {
+            border: none;
+            outline: none;
+            background-color: black;
+            color: white;
+            padding: 5px 10px 5px 10px;
+            font-size: 10px;
+            border-radius: 5px;
+            /*테두리가 깎이는 역할*/
+        }
     </style>
 </head>
 <body>
