--- a/HTML/Anime.html
+++ b/HTML/Anime.html
@@ -9,7 +9,11 @@
     <link rel="stylesheet" href="anime.css" />
 </head>
 <body>
-    <div class="box"></div>
-    <img class="logo" src="logo.png" />
+    <div class="main-screen">
+        <div class="box"></div>
+        <img class="logo" src="logo.png" />
+        <div class="alert"> 화면 크기를 키워주세요</div>
+    </div>
+
 </body>
 </html>
