[css] 1-11 당근 마켓 clone 만들어보기 - bem 명명법사용하기

--- a/mainAssignment/carrotMarket.html
+++ b/mainAssignment/carrotMarket.html
@@ -8,6 +8,10 @@
     <title>당근 마켓 clone</title>
 </head>
 <body>
-
+    <header>
+        <div class="info-bar__input--big"></div>
+        <div class="menu-bar"></div>
+<!--        bem(block, element, modify)명명법-->
+    </header>
 </body>
 </html>
