--- a/mainAssignment/carrotMarket.html
+++ b/mainAssignment/carrotMarket.html
@@ -9,8 +9,14 @@
 </head>
 <body>
     <header>
-        <div class="info-bar__input--big"></div>
-        <div class="menu-bar"></div>
+        <div class="info-bar">
+            <div class="info-bar__time">20:55</div>
+            <div class="info-bar__icons">아이콘들</div>
+        </div>
+        <div class="menu-bar">
+            <div class="menu-bar__location">역삼1동</div>
+            <div class="menu-bar__icons">아이콘들2</div>
+        </div>
 <!--        bem(block, element, modify)명명법-->
     </header>
 </body>
