--- a/mainAssignment/carrotMarket.html
+++ b/mainAssignment/carrotMarket.html
@@ -6,12 +6,15 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>당근 마켓 clone</title>
+    <link rel="stylesheet" href="header.css">
 </head>
 <body>
     <header>
         <div class="info-bar">
             <div class="info-bar__time">20:55</div>
-            <div class="info-bar__icons">아이콘들</div>
+            <div class="info-bar__icons">
+                <img src="asset/chart-bar.svg" alt="chart-bar" />
+            </div>
         </div>
         <div class="menu-bar">
             <div class="menu-bar__location">역삼1동</div>
