[css] 1-11 당근 마켓 clone 만들어보기 - icons 이미지 갖고 오고 크기 조정

--- a/mainAssignment/carrotMarket.html
+++ b/mainAssignment/carrotMarket.html
@@ -14,6 +14,8 @@
             <div class="info-bar__time">20:55</div>
             <div class="info-bar__icons">
                 <img src="asset/chart-bar.svg" alt="chart-bar" />
+                <img src="asset/wi-fi.svg" alt="wi-fi" />
+                <img src="asset/battery.svg" alt="battery" />
             </div>
         </div>
         <div class="menu-bar">
