[css] 1-11 당근 마켓 clone 만들어보기 - 상단 menu-bar icon추가하고 padding/margin 주기

--- a/mainAssignment/carrotMarket.html
+++ b/mainAssignment/carrotMarket.html
@@ -19,8 +19,17 @@
             </div>
         </div>
         <div class="menu-bar">
-            <div class="menu-bar__location">역삼1동</div>
-            <div class="menu-bar__icons">아이콘들2</div>
+            <div class="menu-bar__location">
+                <div>역삼1동</div>
+                <div class="menu-bar__location-icon">
+                    <img src="asset/arrow.svg" alt="arrow" />
+                </div>
+            </div>
+            <div class="menu-bar__icons">
+                <img src="asset/search.svg" alt="search" />
+                <img src="asset/menu.svg" alt="menu" />
+                <img src="asset/alert.svg" alt="alert" />
+            </div>
         </div>
 <!--        bem(block, element, modify)명명법-->
     </header>
