--- a/mainAssignment/carrotMarket.html
+++ b/mainAssignment/carrotMarket.html
@@ -6,33 +6,41 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>당근 마켓 clone</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/header.css">
 </head>
 <body>
     <header>
         <div class="info-bar">
             <div class="info-bar__time">20:55</div>
             <div class="info-bar__icons">
-                <img src="asset/chart-bar.svg" alt="chart-bar" />
-                <img src="asset/wi-fi.svg" alt="wi-fi" />
-                <img src="asset/battery.svg" alt="battery" />
+                <img src="asset/header/chart-bar.svg" alt="chart-bar" />
+                <img src="asset/header/wi-fi.svg" alt="wi-fi" />
+                <img src="asset/header/battery.svg" alt="battery" />
             </div>
         </div>
         <div class="menu-bar">
             <div class="menu-bar__location">
                 <div>역삼1동</div>
                 <div class="menu-bar__location-icon">
-                    <img src="asset/arrow.svg" alt="arrow" />
+                    <img src="asset/header/arrow.svg" alt="arrow" />
                 </div>
             </div>
             <div class="menu-bar__icons">
-                <img src="asset/search.svg" alt="search" />
-                <img src="asset/menu.svg" alt="menu" />
-                <img src="asset/alert.svg" alt="alert" />
+                <img src="asset/header/search.svg" alt="search" />
+                <img src="asset/header/menu.svg" alt="menu" />
+                <img src="asset/header/alert.svg" alt="alert" />
             </div>
         </div>
 <!--        bem(block, element, modify)명명법-->
     </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
