[css] 1-11 당근 마켓 clone 만들어보기 - footer 내용물 먼저 추가 / css 파일만들어서 적용 예정

--- a/mainAssignment/carrotMarket.html
+++ b/mainAssignment/carrotMarket.html
@@ -8,6 +8,7 @@
     <title>당근 마켓 clone</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
     <header>
@@ -40,6 +41,53 @@
     </main>
 
     <footer>
+        <div class="footer-block">
+            <div class="footer-icons">
+                <div>
+                    <img src="asset/footer/home-normal.svg" alt="home" />
+                </div>
+                <div>
+                    홈
+                </div>
+            </div>
+
+            <div class="footer-icons">
+                <div>
+                    <img src="asset/footer/country-normal.svg" alt="country" />
+                </div>
+                <div>
+                    동네 생활
+                </div>
+            </div>
+
+            <div class="footer-icons">
+                <div>
+                    <img src="asset/footer/location-normal.svg" alt="location" />
+                </div>
+                <div>
+                    내 근처
+                </div>
+            </div>
+
+            <div class="footer-icons">
+                <div>
+                    <img src="asset/footer/chat-normal.svg" alt="chat" />
+                </div>
+                <div>
+                    채팅
+                </div>
+            </div>
+
+            <div class="footer-icons">
+                <div>
+                    <img src="asset/footer/user-normal.svg" alt="user" />
+                </div>
+                <div>
+                    나의 당근
+                </div>
+            </div>
+
+        </div>
 
     </footer>
 </body>
