[css] 1-11 당근 마켓 clone 만들어보기 - footer 정렬 및 라인 잡아주기

--- a/mainAssignment/carrotMarket.html
+++ b/mainAssignment/carrotMarket.html
@@ -43,47 +43,47 @@
     <footer>
         <div class="footer-block">
             <div class="footer-icons">
-                <div>
-                    <img src="asset/footer/home-normal.svg" alt="home" />
+                <div class="footer-icons__img">
+                    <img src="asset/footer/home-select.svg" alt="home" />
                 </div>
-                <div>
+                <div class="footer-icons__desc">
                     홈
                 </div>
             </div>
 
             <div class="footer-icons">
-                <div>
+                <div class="footer-icons__img">
                     <img src="asset/footer/country-normal.svg" alt="country" />
                 </div>
-                <div>
-                    동네 생활
+                <div class="footer-icons__desc">
+                    동네생활
                 </div>
             </div>
 
             <div class="footer-icons">
-                <div>
+                <div class="footer-icons__img">
                     <img src="asset/footer/location-normal.svg" alt="location" />
                 </div>
-                <div>
+                <div class="footer-icons__desc">
                     내 근처
                 </div>
             </div>
 
             <div class="footer-icons">
-                <div>
+                <div class="footer-icons__img">
                     <img src="asset/footer/chat-normal.svg" alt="chat" />
                 </div>
-                <div>
+                <div class="footer-icons__desc">
                     채팅
                 </div>
             </div>
 
             <div class="footer-icons">
-                <div>
+                <div class="footer-icons__img">
                     <img src="asset/footer/user-normal.svg" alt="user" />
                 </div>
-                <div>
-                    나의 당근
+                <div class="footer-icons__desc">
+                    나의당근
                 </div>
             </div>
 
