[css] 1-11 당근 마켓 clone 만들어보기 - 이미지 css 하고 이미지 삽입해보기

--- a/mainAssignment/carrotMarket.html
+++ b/mainAssignment/carrotMarket.html
@@ -6,9 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>당근 마켓 clone</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -37,7 +35,48 @@
     </header>
 
     <main>
-
+<!--        default setting-->
+        <div class="item-list">
+            <div class="item-list__img">
+                <img src="asset/main/image.svg" alt="image" />
+            </div>
+            <div class="item-list__info">
+                <div class="item-list__info-title">게이밍 pc 팝니다</div>
+                <div class="item-list__info-meta">역삼동 19초 전</div>
+                <div class="item-list__info-price">100만원</div>
+            </div>
+        </div>
+<!--        default setting-->
+        <div class="item-list">
+            <div class="item-list__img">
+                <img src="asset/main/product1.jpg" alt="image" />
+            </div>
+            <div class="item-list__info">
+                <div class="item-list__info-title">게이밍 pc 팝니다</div>
+                <div class="item-list__info-meta">역삼동 19초 전</div>
+                <div class="item-list__info-price">100만원</div>
+            </div>
+        </div>
+        <div class="item-list">
+            <div class="item-list__img">
+                <img src="asset/main/product2.jpg" alt="image" />
+            </div>
+            <div class="item-list__info">
+                <div class="item-list__info-title">게이밍 pc 팝니다</div>
+                <div class="item-list__info-meta">역삼동 19초 전</div>
+                <div class="item-list__info-price">100만원</div>
+            </div>
+        </div>
+        <div class="item-list">
+            <div class="item-list__img">
+                <img src="asset/main/product3.jpg" alt="image" />
+            </div>
+            <div class="item-list__info">
+                <div class="item-list__info-title">게이밍 pc 팝니다</div>
+                <div class="item-list__info-meta">역삼동 19초 전</div>
+                <div class="item-list__info-price">100만원</div>
+            </div>
+        </div>
     </main>
 
     <footer>
