--- a/mainAssignment/carrotMarket.html
+++ b/mainAssignment/carrotMarket.html
@@ -77,6 +77,7 @@
                 <div class="item-list__info-price">100만원</div>
             </div>
         </div>
+        <div class="write-btn">+글쓰기</div>
     </main>
 
     <footer>
