[css] 1-11 당근 마켓 clone 만들어보기 - 애니메이션 추가하기(실패)

--- a/mainAssignment/carrotMarket.html
+++ b/mainAssignment/carrotMarket.html
@@ -7,6 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>당근 마켓 clone</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
     <header>
@@ -133,4 +136,5 @@
 
     <div class="media-info-msg">화면의 크기를 줄여주세요</div>
 </body>
+
 </html>
