--- a/HTML/Anime.html
+++ b/HTML/Anime.html
@@ -11,7 +11,7 @@
 <body>
     <div class="main-screen">
         <div class="box"></div>
-        <img class="logo" src="logo.png" />
+        <img class="logo" src="logo.png" alt="logo"/>
         <div class="alert"> 화면 크기를 키워주세요</div>
     </div>
 
