--- a/JSP/index.html
+++ b/JSP/index.html
@@ -8,6 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="app.js"></script>
+    <script src="TestVariable.js"></script>
 </body>
 </html>
