--- a/JSP/index.html
+++ b/JSP/index.html
@@ -8,7 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="TestVariable.js"></script>
-    <script src="TestFunction.js"></script>
+<!--    <script src="TestVariable.js"></script>-->
+<!--    <script src="TestFunction.js"></script>-->
+    <h1 id="time" class="time">00:00</h1>
+    <script src="TestEvent.js"></script>
 </body>
 </html>
