--- a/JSP/index.html
+++ b/JSP/index.html
@@ -11,6 +11,6 @@
 <!--    <script src="TestVariable.js"></script>-->
 <!--    <script src="TestFunction.js"></script>-->
     <h1 id="time" class="time">00:00</h1>
-    <script src="TestEvent.js"></script>
+    <script src="TimeClass.js"></script>
 </body>
 </html>
