[2-6] javascript 시간과 문자열 - padStart() 적용 / 타이머도 만들어보기

--- a/JSP/index.html
+++ b/JSP/index.html
@@ -11,6 +11,7 @@
 <!--    <script src="TestVariable.js"></script>-->
 <!--    <script src="TestFunction.js"></script>-->
     <h1 id="time" class="time">00:00</h1>
+    <h2 id="time2" class="time2">00:00</h2>
     <script src="TimeClass.js"></script>
 </body>
 </html>
