[2-7] javascript wordle 게임 만들기 - header 구성

--- a/WordleChallenge/index.html
+++ b/WordleChallenge/index.html
@@ -6,8 +6,29 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Wordle Challenge</title>
+    <link rel="stylesheet" href="CSS/header.css" />
 </head>
 <body>
+    <header>
+        <div class="menu-bar">
+            <div class="menu-bar__menu">
+                <img src="Assets/menu.svg" alt="menu"/>
+            </div>
+            <div class="menu-bar__wordle">
+                Wordle
+            </div>
+            <div class="menu-bar__menu2">
+                <img src="Assets/help.svg" alt="help"/>
+                <img src="Assets/chart.svg" alt="chart"/>
+                <img src="Assets/setting.svg" alt="setting"/>
+            </div>
+        </div>
+    </header>
+    <main>
 
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
