[2-7] javascript wordle 게임 만들기 - main box 구성하기

--- a/WordleChallenge/index.html
+++ b/WordleChallenge/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Wordle Challenge</title>
     <link rel="stylesheet" href="CSS/header.css" />
+    <link rel="stylesheet" href="CSS/main.css" />
 </head>
 <body>
     <header>
@@ -24,8 +25,43 @@
             </div>
         </div>
     </header>
-    <main>
 
+    <main>
+        <div class="board-row row-0">
+            <div class="board-block"></div>
+            <div class="board-block"></div>
+            <div class="board-block"></div>
+            <div class="board-block"></div>
+            <div class="board-block"></div>
+        </div>
+        <div class="board-row row-1">
+            <div class="board-block"></div>
+            <div class="board-block"></div>
+            <div class="board-block"></div>
+            <div class="board-block"></div>
+            <div class="board-block"></div>
+        </div>
+        <div class="board-row row-2">
+            <div class="board-block"></div>
+            <div class="board-block"></div>
+            <div class="board-block"></div>
+            <div class="board-block"></div>
+            <div class="board-block"></div>
+        </div>
+        <div class="board-row row-3">
+            <div class="board-block"></div>
+            <div class="board-block"></div>
+            <div class="board-block"></div>
+            <div class="board-block"></div>
+            <div class="board-block"></div>
+        </div>
+        <div class="board-row row-4">
+            <div class="board-block"></div>
+            <div class="board-block"></div>
+            <div class="board-block"></div>
+            <div class="board-block"></div>
+            <div class="board-block"></div>
+        </div>
     </main>
     <footer>
 
