[2-7] javascript wordle 게임 만들기 - footer box 구성하기

--- a/WordleChallenge/index.html
+++ b/WordleChallenge/index.html
@@ -8,6 +8,7 @@
     <title>Wordle Challenge</title>
     <link rel="stylesheet" href="CSS/header.css" />
     <link rel="stylesheet" href="CSS/main.css" />
+    <link rel="stylesheet" href="CSS/footer.css" />
 </head>
 <body>
     <header>
@@ -64,7 +65,42 @@
         </div>
     </main>
     <footer>
-
+        <div class="word-keyInput">
+            <div class="word-key keyQ">Q</div>
+            <div class="word-key keyW">W</div>
+            <div class="word-key keyE">E</div>
+            <div class="word-key keyR">R</div>
+            <div class="word-key keyT">T</div>
+            <div class="word-key keyY">Y</div>
+            <div class="word-key keyU">U</div>
+            <div class="word-key keyI">I</div>
+            <div class="word-key keyO">O</div>
+            <div class="word-key keyP">P</div>
+        </div>
+        <div class="word-keyInput">
+            <div class="word-key keyA">A</div>
+            <div class="word-key keyS">S</div>
+            <div class="word-key keyD">D</div>
+            <div class="word-key keyF">F</div>
+            <div class="word-key keyG">G</div>
+            <div class="word-key keyH">H</div>
+            <div class="word-key keyJ">J</div>
+            <div class="word-key keyK">K</div>
+            <div class="word-key keyL">L</div>
+        </div>
+        <div class="word-keyInput">
+            <div class="word-key-enter keyENTER"> ENTER</div>
+            <div class="word-key keyZ">Z</div>
+            <div class="word-key keyX">X</div>
+            <div class="word-key keyC">C</div>
+            <div class="word-key keyV">V</div>
+            <div class="word-key keyB">B</div>
+            <div class="word-key keyN">N</div>
+            <div class="word-key keyM">M</div>
+            <div class="word-key-delete keyDELETE">
+                <img src="Assets/delete.svg" alt="delete" />
+            </div>
+        </div>
     </footer>
 </body>
 </html>
