--- a/WordleChallenge/index.html
+++ b/WordleChallenge/index.html
@@ -29,39 +29,39 @@
 
     <main>
         <div class="board-row row-0">
-            <div class="board-block"></div>
-            <div class="board-block"></div>
-            <div class="board-block"></div>
-            <div class="board-block"></div>
-            <div class="board-block"></div>
+            <div class="board-block" data-index="00"></div>
+            <div class="board-block" data-index="01"></div>
+            <div class="board-block" data-index="02"></div>
+            <div class="board-block" data-index="03"></div>
+            <div class="board-block" data-index="04"></div>
         </div>
         <div class="board-row row-1">
-            <div class="board-block"></div>
-            <div class="board-block"></div>
-            <div class="board-block"></div>
-            <div class="board-block"></div>
-            <div class="board-block"></div>
+            <div class="board-block" data-index="10"></div>
+            <div class="board-block" data-index="11"></div>
+            <div class="board-block" data-index="12"></div>
+            <div class="board-block" data-index="13"></div>
+            <div class="board-block" data-index="14"></div>
         </div>
         <div class="board-row row-2">
-            <div class="board-block"></div>
-            <div class="board-block"></div>
-            <div class="board-block"></div>
-            <div class="board-block"></div>
-            <div class="board-block"></div>
+            <div class="board-block" data-index="20"></div>
+            <div class="board-block" data-index="21"></div>
+            <div class="board-block" data-index="22"></div>
+            <div class="board-block" data-index="23"></div>
+            <div class="board-block" data-index="24"></div>
         </div>
         <div class="board-row row-3">
-            <div class="board-block"></div>
-            <div class="board-block"></div>
-            <div class="board-block"></div>
-            <div class="board-block"></div>
-            <div class="board-block"></div>
+            <div class="board-block" data-index="30"></div>
+            <div class="board-block" data-index="31"></div>
+            <div class="board-block" data-index="32"></div>
+            <div class="board-block" data-index="33"></div>
+            <div class="board-block" data-index="34"></div>
         </div>
         <div class="board-row row-4">
-            <div class="board-block"></div>
-            <div class="board-block"></div>
-            <div class="board-block"></div>
-            <div class="board-block"></div>
-            <div class="board-block"></div>
+            <div class="board-block" data-index="40"></div>
+            <div class="board-block" data-index="41"></div>
+            <div class="board-block" data-index="42"></div>
+            <div class="board-block" data-index="43"></div>
+            <div class="board-block" data-index="44"></div>
         </div>
     </main>
     <footer>
@@ -102,5 +102,6 @@
             </div>
         </div>
     </footer>
+<script src="index.js"></script>
 </body>
 </html>
