--- a/WordleChallenge/index.html
+++ b/WordleChallenge/index.html
@@ -66,38 +66,38 @@
     </main>
     <footer>
         <div class="word-keyInput">
-            <div class="word-key keyQ">Q</div>
-            <div class="word-key keyW">W</div>
-            <div class="word-key keyE">E</div>
-            <div class="word-key keyR">R</div>
-            <div class="word-key keyT">T</div>
-            <div class="word-key keyY">Y</div>
-            <div class="word-key keyU">U</div>
-            <div class="word-key keyI">I</div>
-            <div class="word-key keyO">O</div>
-            <div class="word-key keyP">P</div>
+            <div class="word-key" data-key="Q">Q</div>
+            <div class="word-key" data-key="W">W</div>
+            <div class="word-key" data-key="E">E</div>
+            <div class="word-key" data-key="R">R</div>
+            <div class="word-key" data-key="T">T</div>
+            <div class="word-key" data-key="Y">Y</div>
+            <div class="word-key" data-key="U">U</div>
+            <div class="word-key" data-key="I">I</div>
+            <div class="word-key" data-key="O">O</div>
+            <div class="word-key" data-key="P">P</div>
         </div>
         <div class="word-keyInput">
-            <div class="word-key keyA">A</div>
-            <div class="word-key keyS">S</div>
-            <div class="word-key keyD">D</div>
-            <div class="word-key keyF">F</div>
-            <div class="word-key keyG">G</div>
-            <div class="word-key keyH">H</div>
-            <div class="word-key keyJ">J</div>
-            <div class="word-key keyK">K</div>
-            <div class="word-key keyL">L</div>
+            <div class="word-key" data-key="A">A</div>
+            <div class="word-key" data-key="S">S</div>
+            <div class="word-key" data-key="D">D</div>
+            <div class="word-key" data-key="F">F</div>
+            <div class="word-key" data-key="G">G</div>
+            <div class="word-key" data-key="H">H</div>
+            <div class="word-key" data-key="J">J</div>
+            <div class="word-key" data-key="K">K</div>
+            <div class="word-key" data-key="L">L</div>
         </div>
         <div class="word-keyInput">
-            <div class="word-key-enter keyENTER"> ENTER</div>
-            <div class="word-key keyZ">Z</div>
-            <div class="word-key keyX">X</div>
-            <div class="word-key keyC">C</div>
-            <div class="word-key keyV">V</div>
-            <div class="word-key keyB">B</div>
-            <div class="word-key keyN">N</div>
-            <div class="word-key keyM">M</div>
-            <div class="word-key-delete keyDELETE">
+            <div class="word-key" data-key="Enter">ENTER</div>
+            <div class="word-key" data-key="Z">Z</div>
+            <div class="word-key" data-key="X">X</div>
+            <div class="word-key" data-key="C">C</div>
+            <div class="word-key" data-key="V">V</div>
+            <div class="word-key" data-key="B">B</div>
+            <div class="word-key" data-key="N">N</div>
+            <div class="word-key" data-key="M">M</div>
+            <div class="word-key" data-key="Backspace">
                 <img src="Assets/delete.svg" alt="delete" />
             </div>
         </div>
