[2-7] javascript wordle 게임 만들기 - 색상view 변경

--- a/WordleChallenge/index.html
+++ b/WordleChallenge/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible"e">
     <title>Wordle Challenge</title>
     <link rel="stylesheet" href="CSS/header.css" />
     <link rel="stylesheet" href="CSS/main.css" />
@@ -89,7 +88,7 @@
             <div class="word-key" data-key="L">L</div>
         </div>
         <div class="word-keyInput">
-            <div class="word-key" data-key="Enter">ENTER</div>
+            <div class="word-key-enter" data-key="Enter">ENTER</div>
             <div class="word-key" data-key="Z">Z</div>
             <div class="word-key" data-key="X">X</div>
             <div class="word-key" data-key="C">C</div>
@@ -97,7 +96,7 @@
             <div class="word-key" data-key="B">B</div>
             <div class="word-key" data-key="N">N</div>
             <div class="word-key" data-key="M">M</div>
-            <div class="word-key" data-key="Backspace">
+            <div class="word-key-delete" data-key="Backspace">
                 <img src="Assets/delete.svg" alt="delete" />
             </div>
         </div>
