[2-7] javascript wordle 게임 만들기 - 총 6회의 시도

--- a/WordleChallenge/index.html
+++ b/WordleChallenge/index.html
@@ -62,6 +62,13 @@
             <div class="board-block" data-index="43"></div>
             <div class="board-block" data-index="44"></div>
         </div>
+        <div class="board-row row-5">
+            <div class="board-block" data-index="50"></div>
+            <div class="board-block" data-index="51"></div>
+            <div class="board-block" data-index="52"></div>
+            <div class="board-block" data-index="53"></div>
+            <div class="board-block" data-index="54"></div>
+        </div>
     </main>
     <footer>
         <div class="word-keyInput">
