[2-7] javascript wordle 게임 만들기 - 페이지 오류 수정

--- a/WordleChallenge/index.html
+++ b/WordleChallenge/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible"e">
+    <meta name="viewport device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible">
     <title>Wordle Challenge</title>
     <link rel="stylesheet" href="CSS/header.css" />
     <link rel="stylesheet" href="CSS/main.css" />
