[2-7] javascript wordle 게임 만들기 - wordle 누르면 페이지 새로 고침

--- a/WordleChallenge/index.html
+++ b/WordleChallenge/index.html
@@ -16,7 +16,9 @@
                 <img src="Assets/menu.svg" alt="menu"/>
             </div>
             <div class="menu-bar__wordle">
-                Wordle
+                <a onClick="window.location.reload()" style="cursor: pointer">
+                    Wordle
+                </a>
             </div>
             <div class="menu-bar__menu2">
                 <img src="Assets/help.svg" alt="help"/>
