[2-7] javascript wordle 게임 만들기 - html에 onclick 넣고 클릭 시 해당 키 값 불러 오게 구현

--- a/WordleChallenge/index.html
+++ b/WordleChallenge/index.html
@@ -74,7 +74,7 @@
     </main>
     <footer>
         <div class="word-keyInput">
-            <div class="word-key" data-key="Q">Q</div>
+            <div class="word-key" onclick="" data-key="Q">Q</div>
             <div class="word-key" data-key="W">W</div>
             <div class="word-key" data-key="E">E</div>
             <div class="word-key" data-key="R">R</div>
