--- a/WordleChallenge/index.html
+++ b/WordleChallenge/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="CSS/header.css" />
     <link rel="stylesheet" href="CSS/main.css" />
     <link rel="stylesheet" href="CSS/footer.css" />
+
 </head>
 <body>
     <header>
@@ -75,41 +76,41 @@
     <footer>
         <div class="word-keyInput">
             <div class="word-key" onclick="" data-key="Q">Q</div>
-            <div class="word-key" data-key="W">W</div>
-            <div class="word-key" data-key="E">E</div>
-            <div class="word-key" data-key="R">R</div>
-            <div class="word-key" data-key="T">T</div>
-            <div class="word-key" data-key="Y">Y</div>
-            <div class="word-key" data-key="U">U</div>
-            <div class="word-key" data-key="I">I</div>
-            <div class="word-key" data-key="O">O</div>
-            <div class="word-key" data-key="P">P</div>
+            <div class="word-key" onclick="" data-key="W">W</div>
+            <div class="word-key" onclick="" data-key="E">E</div>
+            <div class="word-key" onclick="" data-key="R">R</div>
+            <div class="word-key" onclick="" data-key="T">T</div>
+            <div class="word-key" onclick="" data-key="Y">Y</div>
+            <div class="word-key" onclick="" data-key="U">U</div>
+            <div class="word-key" onclick="" data-key="I">I</div>
+            <div class="word-key" onclick="" data-key="O">O</div>
+            <div class="word-key" onclick="" data-key="P">P</div>
         </div>
         <div class="word-keyInput">
-            <div class="word-key" data-key="A">A</div>
-            <div class="word-key" data-key="S">S</div>
-            <div class="word-key" data-key="D">D</div>
-            <div class="word-key" data-key="F">F</div>
-            <div class="word-key" data-key="G">G</div>
-            <div class="word-key" data-key="H">H</div>
-            <div class="word-key" data-key="J">J</div>
-            <div class="word-key" data-key="K">K</div>
-            <div class="word-key" data-key="L">L</div>
+            <div class="word-key" onclick="" data-key="A">A</div>
+            <div class="word-key" onclick="" data-key="S">S</div>
+            <div class="word-key" onclick="" data-key="D">D</div>
+            <div class="word-key" onclick="" data-key="F">F</div>
+            <div class="word-key" onclick="" data-key="G">G</div>
+            <div class="word-key" onclick="" data-key="H">H</div>
+            <div class="word-key" onclick="" data-key="J">J</div>
+            <div class="word-key" onclick="" data-key="K">K</div>
+            <div class="word-key" onclick="" data-key="L">L</div>
         </div>
         <div class="word-keyInput">
-            <div class="word-key-enter" data-key="Enter">ENTER</div>
-            <div class="word-key" data-key="Z">Z</div>
-            <div class="word-key" data-key="X">X</div>
-            <div class="word-key" data-key="C">C</div>
-            <div class="word-key" data-key="V">V</div>
-            <div class="word-key" data-key="B">B</div>
-            <div class="word-key" data-key="N">N</div>
-            <div class="word-key" data-key="M">M</div>
-            <div class="word-key-delete" data-key="Backspace">
+            <div class="word-key-enter" onclick="" data-key="Enter">ENTER</div>
+            <div class="word-key" onclick="" data-key="Z">Z</div>
+            <div class="word-key" onclick="" data-key="X">X</div>
+            <div class="word-key" onclick="" data-key="C">C</div>
+            <div class="word-key" onclick="" data-key="V">V</div>
+            <div class="word-key" onclick="" data-key="B">B</div>
+            <div class="word-key" onclick="" data-key="N">N</div>
+            <div class="word-key" onclick="" data-key="M">M</div>
+            <div class="word-key-delete" onclick="" data-key="Backspace">
                 <img src="Assets/delete.svg" alt="delete" />
             </div>
         </div>
     </footer>
-<script src="index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
