[2-7] javascript wordle 게임 만들기 - onclick되어서 keyboard에 있는 키 값만 console에 출력하게 끔 함

--- a/WordleChallenge/index.html
+++ b/WordleChallenge/index.html
@@ -107,7 +107,7 @@
             <div class="word-key" onclick="" data-key="N">N</div>
             <div class="word-key" onclick="" data-key="M">M</div>
             <div class="word-key-delete" onclick="" data-key="Backspace">
-                <img src="Assets/delete.svg" alt="delete" />
+                <img src="Assets/delete.svg" alt="delete" data-key="Backspace"/>
             </div>
         </div>
     </footer>
