--- a/HTML/BoxModel.html
+++ b/HTML/BoxModel.html
@@ -15,11 +15,18 @@
             margin-bottom: 200px;
             border: 10px ridge black;
         }
+        .box {
+            width: 100px;
+            height: 100px;
+            padding: 10px;
+            border: 5px;
+            margin: 20px;
+        }
     </style>
 </head>
 <body>
     <div>♣♣♣♣♣♣♣♣♣ ♣♣♣♣♣♣♣♣♣ ♣♣♣♣♣♣♣♣♣</div>
-    <div>♣♣♣♣♣♣♣♣♣</div>
+    <div class="box">♣♣♣♣♣♣♣♣♣</div>
 
 </body>
 </html>
