--- a/Memo/index.html
+++ b/Memo/index.html
@@ -8,6 +8,14 @@
     <title>Memo</title>
 </head>
 <body>
-    <input type="text" placeholder="여기에 메모를 입력해주세요."/>
+    <form id="memo-form">
+        <label for="memo-input">메모를 입력하세요</label>
+        <input type="text"
+               id="memo-input"
+               placeholder="여기에 메모를 입력해주세요."
+               required
+        />
+        <button id="memo-submit-button">생성!</button>
+    </form>
 </body>
 </html>
