[Day5] python 프로젝트 만들기 - 간단한 메모 만들기[5] 버그 수정 - favicon.ico가 프로젝트 경로상에 없기 때문에 제거

--- a/Memo/static/index.html
+++ b/Memo/static/index.html
@@ -6,6 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Memo</title>
+<!--    favicon.ico 404 페이지 에러를 잡기 위해서 해당 link의 href 속성을 null 처리함-->
+    <link rel="shortcut icon" href="#" />
 </head>
 <body>
     <form id="memo-form">
