[Day5] python 프로젝트 만들기 - 간단한 메모 만들기[7] : 서버에 메모 생성 요청 완료..

--- a/Memo/static/index.html
+++ b/Memo/static/index.html
@@ -11,13 +11,13 @@
 </head>
 <body>
     <form id="memo-form">
-        <label for="memo-input">메모를 입력하세요</label>
+        <label for="memo-input">메모를 입력 하세요</label>
         <input type="text"
                id="memo-input"
-               placeholder="여기에 메모를 입력해주세요."
+               placeholder="여기에 메모를 입력 해 주세요."
                required
         />
-        <button id="memo-submit-button">생성!</button>
+        <button type="submit" id="memo-submit-button">생성!</button>
     </form>
 <script src="app.js"></script>
 </body>
