--- a/Memo/static/index.html
+++ b/Memo/static/index.html
@@ -19,6 +19,7 @@
         />
         <button type="submit" id="memo-submit-button">생성!</button>
     </form>
+    <ul id="memo-ul"></ul>
 <script src="app.js"></script>
 </body>
 </html>
