[Day5] 1-12 당근 마켓 clone 만들어보기 - crud 추가하기 : python 서버에 post/get 구현 완료 : page 박살나는 문제

--- a/mainAssignment/static/index.html
+++ b/mainAssignment/static/index.html
@@ -113,9 +113,11 @@
             </div>
 
             <div class="footer-icons">
-                <div class="footer-icons__img">
-                    <img src="../asset/footer/chat-normal.svg" alt="chat" />
-                </div>
+                <a href="/chat">
+                    <div class="footer-icons__img">
+                        <img src="../asset/footer/chat-normal.svg" alt="chat" />
+                    </div>
+                </a>
                 <div class="footer-icons__desc">
                     채팅
                 </div>
