[Day5] 1-13 당근 마켓 clone 만들어보기 - fastAPI 이용을 위해 css/asset 파일 경로 재지정

--- a/mainAssignment/static/index.html
+++ b/mainAssignment/static/index.html
@@ -6,32 +6,32 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>당근 마켓 clone</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
     <header>
         <div class="info-bar">
             <div class="info-bar__time">20:55</div>
             <div class="info-bar__icons">
-                <img src="../asset/header/chart-bar.svg" alt="chart-bar" />
-                <img src="../asset/header/wi-fi.svg" alt="wi-fi" />
-                <img src="../asset/header/battery.svg" alt="battery" />
+                <img src="asset/header/chart-bar.svg" alt="chart-bar" />
+                <img src="asset/header/wi-fi.svg" alt="wi-fi" />
+                <img src="asset/header/battery.svg" alt="battery" />
             </div>
         </div>
         <div class="menu-bar">
             <div class="menu-bar__location">
                 <div>역삼1동</div>
                 <div class="menu-bar__location-icon">
-                    <img src="../asset/header/arrow.svg" alt="arrow" />
+                    <img src="asset/header/arrow.svg" alt="arrow" />
                 </div>
             </div>
             <div class="menu-bar__icons">
-                <img src="../asset/header/search.svg" alt="search" />
-                <img src="../asset/header/menu.svg" alt="menu" />
-                <img src="../asset/header/alert.svg" alt="alert" />
+                <img src="asset/header/search.svg" alt="search" />
+                <img src="asset/header/menu.svg" alt="menu" />
+                <img src="asset/header/alert.svg" alt="alert" />
             </div>
         </div>
 <!--        bem(block, element, modify)명명법-->
@@ -41,7 +41,7 @@
 <!--        default setting-->
         <div class="item-list">
             <div class="item-list__img">
-                <img src="../asset/main/image.svg" alt="image" />
+                <img src="asset/main/image.svg" alt="image" />
             </div>
             <div class="item-list__info">
                 <div class="item-list__info-title">게이밍 pc 팝니다</div>
@@ -52,7 +52,7 @@
 <!--        default setting-->
         <div class="item-list">
             <div class="item-list__img">
-                <img src="../asset/main/product1.jpg" alt="image" />
+                <img src="asset/main/product1.jpg" alt="image" />
             </div>
             <div class="item-list__info">
                 <div class="item-list__info-title">게이밍 pc 팝니다</div>
@@ -62,7 +62,7 @@
         </div>
         <div class="item-list">
             <div class="item-list__img">
-                <img src="../asset/main/product2.jpg" alt="image" />
+                <img src="asset/main/product2.jpg" alt="image" />
             </div>
             <div class="item-list__info">
                 <div class="item-list__info-title">게이밍 pc 팝니다</div>
@@ -72,7 +72,7 @@
         </div>
         <div class="item-list">
             <div class="item-list__img">
-                <img src="../asset/main/product3.jpg" alt="image" />
+                <img src="asset/main/product3.jpg" alt="image" />
             </div>
             <div class="item-list__info">
                 <div class="item-list__info-title">게이밍 pc 팝니다</div>
@@ -87,7 +87,7 @@
         <div class="footer-block">
             <div class="footer-icons">
                 <div class="footer-icons__img">
-                    <img src="../asset/footer/home-select.svg" alt="home" />
+                    <img src="asset/footer/home-select.svg" alt="home" />
                 </div>
                 <div class="footer-icons__desc">
                     홈
@@ -96,7 +96,7 @@
 
             <div class="footer-icons">
                 <div class="footer-icons__img">
-                    <img src="../asset/footer/country-normal.svg" alt="country" />
+                    <img src="asset/footer/country-normal.svg" alt="country" />
                 </div>
                 <div class="footer-icons__desc">
                     동네생활
@@ -105,7 +105,7 @@
 
             <div class="footer-icons">
                 <div class="footer-icons__img">
-                    <img src="../asset/footer/location-normal.svg" alt="location" />
+                    <img src="asset/footer/location-normal.svg" alt="location" />
                 </div>
                 <div class="footer-icons__desc">
                     내 근처
@@ -115,7 +115,7 @@
             <div class="footer-icons">
                 <a href="/chat">
                     <div class="footer-icons__img">
-                        <img src="../asset/footer/chat-normal.svg" alt="chat" />
+                        <img src="asset/footer/chat-normal.svg" alt="chat" />
                     </div>
                 </a>
                 <div class="footer-icons__desc">
@@ -125,7 +125,7 @@
 
             <div class="footer-icons">
                 <div class="footer-icons__img">
-                    <img src="../asset/footer/user-normal.svg" alt="user" />
+                    <img src="asset/footer/user-normal.svg" alt="user" />
                 </div>
                 <div class="footer-icons__desc">
                     나의당근
