--- a/mainAssignment/static/chat.html
+++ b/mainAssignment/static/chat.html
@@ -6,32 +6,32 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>당근 마켓 clone</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
 <header>
     <div class="info-bar">
         <div class="info-bar__time">20:55</div>
         <div class="info-bar__icons">
-            <img src="../asset/header/chart-bar.svg" alt="chart-bar" />
-            <img src="../asset/header/wi-fi.svg" alt="wi-fi" />
-            <img src="../asset/header/battery.svg" alt="battery" />
+            <img src="asset/header/chart-bar.svg" alt="chart-bar" />
+            <img src="asset/header/wi-fi.svg" alt="wi-fi" />
+            <img src="asset/header/battery.svg" alt="battery" />
         </div>
     </div>
     <div class="menu-bar">
         <div class="menu-bar__location">
             <div>역삼1동</div>
             <div class="menu-bar__location-icon">
-                <img src="../asset/header/arrow.svg" alt="arrow" />
+                <img src="asset/header/arrow.svg" alt="arrow" />
             </div>
         </div>
         <div class="menu-bar__icons">
-            <img src="../asset/header/search.svg" alt="search" />
-            <img src="../asset/header/menu.svg" alt="menu" />
-            <img src="../asset/header/alert.svg" alt="alert" />
+            <img src="asset/header/search.svg" alt="search" />
+            <img src="asset/header/menu.svg" alt="menu" />
+            <img src="asset/header/alert.svg" alt="alert" />
         </div>
     </div>
     <!--        bem(block, element, modify)명명법-->
@@ -55,7 +55,7 @@
     <div class="footer-block">
         <div class="footer-icons">
             <div class="footer-icons__img">
-                <img src="../asset/footer/home-select.svg" alt="home" />
+                <img src="asset/footer/home-select.svg" alt="home" />
             </div>
             <div class="footer-icons__desc">
                 홈
@@ -64,7 +64,7 @@
 
         <div class="footer-icons">
             <div class="footer-icons__img">
-                <img src="../asset/footer/country-normal.svg" alt="country" />
+                <img src="asset/footer/country-normal.svg" alt="country" />
             </div>
             <div class="footer-icons__desc">
                 동네생활
@@ -73,7 +73,7 @@
 
         <div class="footer-icons">
             <div class="footer-icons__img">
-                <img src="../asset/footer/location-normal.svg" alt="location" />
+                <img src="asset/footer/location-normal.svg" alt="location" />
             </div>
             <div class="footer-icons__desc">
                 내 근처
@@ -83,7 +83,7 @@
         <div class="footer-icons">
             <a href="/chat">
                 <div class="footer-icons__img">
-                    <img src="../asset/footer/chat-normal.svg" alt="chat" />
+                    <img src="asset/footer/chat-normal.svg" alt="chat" />
                 </div>
             </a>
             <div class="footer-icons__desc">
@@ -93,7 +93,7 @@
 
         <div class="footer-icons">
             <div class="footer-icons__img">
-                <img src="../asset/footer/user-normal.svg" alt="user" />
+                <img src="asset/footer/user-normal.svg" alt="user" />
             </div>
             <div class="footer-icons__desc">
                 나의당근
