--- a/mainAssignment/static/chat.html
+++ b/mainAssignment/static/chat.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>당근 마켓 clone</title>
-    <link rel="stylesheet" href="css/style.css">
+<!--    <link rel="stylesheet" href="css/style.css">-->
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/footer.css">
@@ -104,7 +104,8 @@
 
 </footer>
 
-<div class="media-info-msg">화면의 크기를 줄여주세요</div>
+<!--<div class="media-info-msg">화면의 크기를 줄여주세요</div>-->
+<script src="app.js"></script>
 </body>
 
 </html>
