--- a/mainAssignment/static/index.html
+++ b/mainAssignment/static/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>당근 마켓 clone</title>
-    <link rel="stylesheet" href="css/style.css">
+<!--    <link rel="stylesheet" href="css/style.css">-->
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/footer.css">
@@ -112,12 +112,12 @@
                 </div>
             </div>
 
-            <div class="footer-icons">
-                <a href="/chat">
-                    <div class="footer-icons__img">
+            <div class="footer-icons" id="chatting-tap">
+                <div class="footer-icons__img">
+                    <a href="chat.html" onclick="moveChat()">
                         <img src="asset/footer/chat-normal.svg" alt="chat" />
-                    </div>
-                </a>
+                    </a>
+                </div>
                 <div class="footer-icons__desc">
                     채팅
                 </div>
@@ -137,6 +137,7 @@
     </footer>
 
     <div class="media-info-msg">화면의 크기를 줄여주세요</div>
+    <script src="app.js"></script>
 </body>
 
 </html>
