[Day5] 1-13 당근 마켓 clone 만들어보기 - fastAPI 이용을 위해 template 옮겨주기

--- a/mainAssignment/static/index.html
+++ b/mainAssignment/static/index.html
@@ -114,7 +114,7 @@
 
             <div class="footer-icons" id="chatting-tap">
                 <div class="footer-icons__img">
-                    <a href="chat.html" onclick="moveChat()">
+                    <a href="../templates/chat.html" onclick="moveChat()">
                         <img src="asset/footer/chat-normal.svg" alt="chat" />
                     </a>
                 </div>
